changes to file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://FurqanRahim.github.io/Portfolio",
+  "homepage": ".",
   "name": "furqan-rahim-portfolio",
   "version": "0.1.0",
   "private": true,
